@@ -19,6 +19,7 @@
  * Fixed query_parse to convert dates to UTC.
  * Fixed form preview inside block.
  * Added unique id to img_tag_{mode} code generated 'UUID'. <== TODO: Document
+ * Added PATH_mode.format and [JS] marker to img_tag_{mode}.
 
 == 1.2.2 2012-08-30
 
